--- a/newModule/new1/pom.xml
+++ b/newModule/new1/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.test</groupId>
-        <artifactId>untitled1</artifactId>
+        <groupId>org.example</groupId>
+        <artifactId>newModule</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>untitledsmall</artifactId>
+    <artifactId>new1</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
