--- a/newModule/pom.xml
+++ b/newModule/pom.xml
@@ -4,17 +4,30 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.test</groupId>
-        <artifactId>untitled1</artifactId>
+        <groupId>org.example</groupId>
+        <artifactId>my-app-multy-module</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>untitledsmall</artifactId>
+    <artifactId>newModule</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>new1</module>
+        <module>new2</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+<dependencies> <dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-engine</artifactId>
+    <version>5.10.0</version>
+    <scope>test</scope>
+</dependency></dependencies>
+
 
 </project>
